# ai-frontier

./: .env.example  .gitignore  CLAUDE.md  DIGEST_USAGE.md  FINAL_PROCESSING_REPORT.md  GITHUB_SETUP.md  README.md  add_missing_embeddings.py  ai_processed_cleanup.py  automation_script.py  batch_keyword_extraction.py  comprehensive_cleanup.py  comprehensive_metadata_cleanup.py  enhanced_cleanup.py  generate_daily_summary_19.py  keyword_analysis_results.json  keyword_summary_report.md  metadata_links_updater.py  migrate_papers_by_date.py  n8n_examples.md  pyproject.toml  rename_md_files.py  run_backend.sh  run_frontend.sh  smart_batch_processor.py  update_similarity_links.py  workflow.json
.github/workflows/: collect-papers.yml  deploy-pages.yml  generate-digest.yml
data/: keyword_subscriptions.json  mailing_list.json
data/embeddings/: config.json  faiss.index  metadata.pkl
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  App_broken.jsx  App_new.jsx  index.css
reports/.obsidian/: graph.json  types.json  workspace.json
reports/digests/: daily_digest_20250916.md  daily_digest_20250917.md  daily_digest_20250918.md  daily_digest_20250919.md  daily_digest_20250922.md  daily_digest_20250923.md  daily_digest_20250924.md  daily_digest_20250925.md  daily_digest_20250926.md
reports/individual_papers/: (SP)$^2$-Net_ A Neural Spatial Spectrum Method for DOA Estimation_20250922.md  A Comprehensive Survey on the Trustworthiness of L_20250918.md  (+654 more)
src/: __init__.py
src/ai_frontier/: main.py  (+2 more)
tests/: test_basic.py
(+3869 files in other folders)
